Sat Jul 18 23:44:59 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (reg_enc_error): use rb_enc_get to get the encoding of
	  a Regexp object. REGEXP(re)->ptr->enc is the encoding of the
	  regexp engin for patterns and target strings.
	  [ruby-core:23208]

Sat Jul 18 07:06:31 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb,ext/tk/lib/tk/grid.rb: Bug fix on grid_slaves().
	  Extend usage pattern of grid_column()/grid_row().

Sat Jul 18 06:30:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h: include winsock headers in extern "C++" for
	  C++ extension libraries.

	* include/ruby/missing.h (vsnprintf): workaround for VC++.
	  [ruby-core:23096]

Sat Jul 18 00:23:47 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ext/readline/readline.c (Init_readline): rl_catch_signals does
	  not exist on some platform like Mac OS X 10.5.

	* ext/readline/extconf.rb: checks existance of rl_catch_signals.

Fri Jul 17 22:29:21 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/readline/readline.c (Init_readline): use rl_catch_sigwinch only
	  when existing.

	* ext/readline/extconf.rb: check existance of rl_catch_sigwinch, and
	  workaround for native Win32 readline port.

Fri Nov 28 17:52:26 2008  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/foerwardable.rb: should be usable def_single_delegator for
	  Class and Module.
	  [ruby-dev:38815]

Thu Jul 16 18:28:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* id.c (Init_id), vm.c (vm_exec): @#__ThrowState__ is no longer
	  used.  [ruby-dev:38760]

Thu Jul 16 08:56:32 2009  Koichi Sasada  <ko1@atdot.net>

	* dir.c (push_glob): re-fix GC problem.

Wed Jul 15 23:45:11 2009  Koichi Sasada  <ko1@atdot.net>

	* dir.c (push_glob): fix GC problem.

Tue May  5 10:42:28 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Update to JSON 1.1.4.

Wed Jul 15 16:29:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (LIBPATHFLAG): path is already quoted in mkmf.rb.
