@@ -1,3 +1,7 @@
+Sun Jul 19 17:32:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (io_read): should taint the result.   [ruby-dev:38826]
+
 Sat Jul 18 23:44:59 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* re.c (reg_enc_error): use rb_enc_get to get the encoding of
